<resources>
    <string name="title_home">Home</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="success">Success</string>
    <string name="action_save">Save</string>
    <string name="action_login">Login</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change">Change</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_continue">Continue</string>
    <string name="action_back">Back</string>
    <string name="action_skip">Skip</string>
    <string name="action_logout">Logout</string>
    <string name="action_clear">Clear</string>
    <string name="action_exit_anyway">Exit anyway</string>
    <string name="action_stay_and_verify">Stay &amp; verify</string>
    <string name="action_try_again">Try Again</string>
    <string name="action_pair_station_via_bluetooth">Pair station via Bluetooth</string>
    <string name="action_upload">Upload</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_open_settings">Open Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_pair_device">Pair Device</string>
    <string name="action_retry_updating">Retry Updating</string>
    <string name="action_retry_upload">Retry upload</string>
    <string name="action_deny">Deny</string>
    <string name="action_sounds_good">Sounds good!</string>
    <string name="action_update_firmware">Update Firmware</string>
    <string name="action_finish">Finish</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_delete">Delete</string>
    <string name="action_buy_a_station">Buy a Station</string>
    <string name="action_buy_station">Buy Station</string>
    <string name="action_follow_a_station_in_explorer">Follow a station in Explorer Map</string>
    <string name="action_claim">Claim</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_close">Close</string>
    <string name="action_view_all_issues">View All Issues</string>
    <string name="action_open">Open</string>
    <string name="action_done">Done</string>
    <string name="action_i_understand">I understand</string>
    <string name="action_learn_more">Learn more</string>
    <string name="action_get_pro">Get Pro</string>
    <string name="action_maybe_later">Maybe later</string>
    <string name="action_take_me_there">Take me there</string>
    <string name="action_shop_now">Shop now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_scan_qr">Scan QR Code</string>
    <string name="action_scan_barcode">Scan Barcode</string>
    <string name="contact_us">Contact us</string>
    <string name="select_date">Select Date</string>
    <string name="read_more">Read More</string>
    <string name="seven_days_abbr">7D</string>
    <string name="one_month_abbr">1M</string>
    <string name="others">Others</string>
    <string name="total_with_colon">Total:</string>
    <string name="base">Base:</string>
    <string name="beta">Beta:</string>
    <string name="other">Other:</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="troubleshoot_instructions_here">Troubleshoot instructions here</string>
    <string name="you_are_owner_of_station">You are the owner of this station!</string>
    <string name="preview_message_title">Title goes here…</string>
    <string name="preview_message_subtitle">Subtitle goes here…</string>
    <string name="stations_in_area">Stations in this area</string>
    <string name="no_stations_in_area">No stations in this area</string>
    <string name="join_network_promo_subtitle">Get a station and contribute real data to WeatherXM while earning rewards.</string>
    <string name="see_details">See details</string>
    <string name="permission_location_title">Access to your location</string>
    <string name="permission_location_rationale">WeatherXM would like to know your location while using the app. This information will be used to provide more accurate information to you.</string>
    <string name="permission_permanently_denied_title">Permission permanently denied</string>
    <string name="permission_permanently_denied_rationale">Go to the app settings to give the required permissions.</string>
    <string name="warn_cancelled">Cancelled!</string>
    <string name="permission_bluetooth_title">WeatherXM Requests Access to Bluetooth</string>
    <string name="camera_permission_required_title">Access to your camera</string>
    <string name="camera_permission_required">Camera permission is required. Please enable it in your device settings.</string>
    <string name="title_login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_instructions">Login with your email and your password to access your account.</string>
    <string name="already_logged_in">Already logged in.</string>
    <string name="title_explorer">Explorer</string>
    <string name="title_profile">Profile</string>
    <string name="network_stats">Network Statistics</string>
    <string name="network_stats_subtitle">View real-time network health, station activity, $WXM rewards and more.</string>
    <string name="claimed">Claimed</string>
    <string name="active">Active</string>
    <string name="wxm_rewards">$WXM Rewards</string>
    <string name="rewards_explanation">Station owners are rewarded in $WXM for providing data to the WeatherXM Network.</string>
    <string name="deployed_weather_stations_explanation">The number of weather stations already deployed by users.</string>
    <string name="active_weather_stations_explanation">The number of weather stations that were active during the last day.</string>
    <string name="manufactured_weather_stations_explanation">The number of weather stations manufactured and provisioned in the network.</string>
    <string name="last_run">Last Run</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="wxm_token">$WXM Token</string>
    <string name="view_token_contract"><![CDATA[<a href="%1$s">View token contract on Etherscan</a>]]></string>
    <string name="view_reward_mechanism"><![CDATA[<a href="%1$s">Learn more about our reward mechanism</a>]]></string>
    <string name="total_supply">Total Supply</string>
    <string name="total_supply_explanation">Total supply refers to the number of $WXM that have already been created and are either in circulation or locked.</string>
    <string name="circulating_supply">Circulating Supply</string>
    <string name="circulating_supply_explanation">Circulating supply refers to the number of $WXM that are publicly available and circulating in the market.</string>
    <string name="manufacturer_title">Are you a station manufacturer?</string>
    <string name="manufacturer_prompt">Join the ecosystem</string>
    <string name="last_updated">Last Updated on %s</string>
    <string name="total">Total</string>
    <string name="token_metrics">Token Metrics</string>
    <string name="enter_weather_3_0">Enter Weather 3.0</string>
    <string name="deploy_your_station">Deploy your Station</string>
    <string name="check_the_weather">Check the Weather</string>
    <string name="earn_wxm_tokens">Earn $WXM tokens</string>
    <string name="network_growth">Network Growth</string>
    <string name="network_scale_up">Network scale up</string>
    <string name="network_size">Network Size</string>
    <string name="added_in_last_30_days">Added in last 30 days</string>
    <string name="weather_stations_breakdown">Weather stations breakdown</string>
    <string name="deployed">Deployed</string>
    <string name="manufactured_and_provisioned">Manufactured and provisioned</string>
    <string name="network_health">Network health</string>
    <string name="network_uptime">Network uptime</string>
    <string name="active_stations">Active Stations</string>
    <string name="data_quality_score_explanation">The network’s effectiveness relies on meaningful, usable data, measured by the Data Quality score. A station’s daily reward is tied to its Data Quality Score, calculated using an open-source algorithm that assesses data quality and provides a confidence level in the data received.</string>
    <string name="network_health_explanation">Reflects the overall performance and reliability of the network. It consists of data quality, network uptime and number of healthy stations (calculated monthly) to indicate how well the network is functioning and how trustworthy the collected data is.</string>
    <string name="total_wxm_allocated">Total $WXM allocated</string>
    <string name="view_network_stats_dune"><![CDATA[<a href="%1$s">View network stats on Dune</a>]]></string>
    <string name="boost_rewards">Boost Rewards</string>
    <string name="total_wxm_allocated_explanation">The total amount of $WXM tokens distributed within the network. This includes both claimed tokens (earned and withdrawn) and reserved tokens (earned but not yet withdrawn).</string>
    <string name="base_rewards_explanation">The standard $WXM tokens that weather stations earn for consistently providing reliable data. These are regular rewards received by stations on a daily basis for their normal operation.</string>
    <string name="boost_rewards_explanation">Boost Rewards are extra tokens awarded for special contributions or actions.</string>
    <string name="reserved">Reserved</string>
    <string name="search_station_name_address">Search station name or address</string>
    <string name="recent">Recent</string>
    <string name="search_no_results">Your search returned no results</string>
    <string name="search_no_results_message">Try searching for something else or check for spelling mistakes.</string>
    <string name="search_no_recent_results">No recent search results</string>
    <string name="update_station">Update Station</string>
    <string name="connect_to_station">Connect to Station</string>
    <string name="download_firmware_update">Download Firmware Update</string>
    <string name="install_firmware_update">Install Firmware Update</string>
    <string name="action_view_station">View Station</string>
    <string name="action_continue_photo_verification">Continue to Photo Verification</string>
    <string name="action_cancel_claiming">Cancel Claiming</string>
    <string name="action_retry_claiming">Retry Claiming</string>
    <string name="station_claimed">Station Claimed</string>
    <string name="success_claim_device"><![CDATA[Your station is claimed under your account!<br><b>%s</b>]]></string>
    <string name="rebooting_station">Rebooting Station</string>
    <string name="change_frequency">Change Frequency</string>
    <string name="reboot_station">Reboot Station</string>
    <string name="share">Share</string>
    <string name="changing_frequency">Changing Frequency</string>
    <string name="data_quality_score">Data Quality Score</string>
    <string name="terms_dialog_title">About our legal terms</string>
    <string name="terms_dialog_message"><![CDATA[We’ve implemented the new <a href="%1$s">Terms of Use</a> and <a href="%2$s">Privacy Policy</a> to better serve you and ensure alignment with best practices and applicable laws. By continuing to use the app for the next 30 days, it is considered that you accept the new terms and privacy policy mentioned above.<br><br>By accepting these Terms of Use and Privacy Policy, you agree that they apply to all prior and future interactions with the app.]]></string>
    <string name="preparing_the_upload">Preparing the upload…</string>
    <string name="preparing_the_upload_subtitle">Almost there! We’ll let you know once everything is ready.</string>
</resources>