<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/network_stats" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false">

            <com.weatherxm.ui.components.NetworkStatsCardView
                android:id="@+id/healthCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_to_large"
                android:clipChildren="false"
                app:first_sub_card_title="@string/data_quality_score"
                app:layout_constraintTop_toTopOf="parent"
                app:main_value_title="@string/network_uptime"
                app:second_sub_card_title="@string/active_stations"
                app:title="@string/network_health" />

            <com.weatherxm.ui.components.NetworkStatsCardView
                android:id="@+id/growthCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:clipChildren="false"
                app:first_sub_card_title="@string/network_size"
                app:layout_constraintTop_toBottomOf="@id/healthCard"
                app:main_value_title="@string/network_scale_up"
                app:second_sub_card_title="@string/added_in_last_30_days"
                app:title="@string/network_growth" />

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/buyCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal_to_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:clipChildren="false"
                app:layout_constraintTop_toBottomOf="@id/growthCard"
                tools:composableName="com.weatherxm.ui.components.compose.BuyStationPromptCardKt" />

            <com.weatherxm.ui.components.NetworkStatsCardView
                android:id="@+id/rewardsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:clipChildren="false"
                app:first_sub_card_title="@string/total"
                app:layout_constraintTop_toBottomOf="@id/buyCard"
                app:main_value_title="@string/last_30_days"
                app:second_sub_card_title="@string/last_run"
                app:title="@string/wxm_rewards" />

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/proPromotionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal_to_large"
                android:layout_marginTop="@dimen/margin_normal"
                android:clipChildren="false"
                app:layout_constraintTop_toBottomOf="@id/rewardsCard"
                tools:composableName="com.weatherxm.ui.components.compose.ProPromotionCardKt.PreviewProPromotionCard" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/manufacturerCard"
                style="@style/Widget.WeatherXM.MaterialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_normal_to_large"
                android:layout_marginTop="@dimen/margin_normal"
                app:cardBackgroundColor="@color/blueTint"
                app:cardElevation="@dimen/elevation_small"
                app:contentPadding="@dimen/padding_small_to_normal"
                app:contentPaddingLeft="@dimen/padding_large"
                app:layout_constraintTop_toBottomOf="@id/proPromotionCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/contactUsBtn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/manufacturerTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:text="@string/manufacturer_title"
                            android:textAppearance="@style/TextAppearance.WeatherXM.Default.BodySmall"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/manufacturerPrompt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_normal"
                            android:text="@string/manufacturer_prompt"
                            android:textAppearance="@style/TextAppearance.WeatherXM.Default.PrimaryColor"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/manufacturerTitle" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/contactUsBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_normal"
                        android:paddingEnd="@dimen/padding_normal"
                        android:text="@string/contact_us"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lastUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_normal_to_large"
                android:gravity="end"
                android:paddingHorizontal="@dimen/padding_extra_small"
                android:text="@string/last_updated"
                android:textAppearance="@style/TextAppearance.WeatherXM.Default.BodyMedium"
                android:textFontWeight="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manufacturerCard" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Empty -->

    <com.weatherxm.ui.components.EmptyView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/padding_extra_large"
        android:visibility="gone"
        app:empty_animation="@raw/anim_empty_devices"
        tools:empty_subtitle="How are you?"
        tools:empty_title="Nothing here" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
