<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alternativeBackground"
    android:paddingHorizontal="@dimen/padding_normal">

    <com.weatherxm.ui.components.EmptyView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:empty_animation="@raw/anim_loading"
        app:empty_subtitle="@string/success_claim_device"
        app:empty_title="@string/station_claimed"
        app:layout_constraintBottom_toTopOf="@id/statusView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewStationBtn"
        style="@style/Widget.WeatherXM.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small_to_normal"
        android:text="@string/action_view_station"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/Widget.WeatherXM.Button.Subtle.Borders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/action_cancel_claiming"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/retry"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retry"
        style="@style/Widget.WeatherXM.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/action_retry_claiming"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>
