<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/alternativeBackground"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/update_station" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.weatherxm.ui.components.BleActionFlowView
        android:id="@+id/bleActionFlow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_normal"
        app:ble_action_flow_first_step="@string/connect_to_station"
        app:ble_action_flow_second_step="@string/download_firmware_update"
        app:ble_action_flow_third_step="@string/install_firmware_update"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/successWithPhotoVerificationContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_normal"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/photoVerificationBtn"
            style="@style/Widget.WeatherXM.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_small_to_normal"
            android:text="@string/action_continue_photo_verification"
            app:layout_constraintBottom_toTopOf="@id/skipAndGoToStationBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipAndGoToStationBtn"
            style="@style/Widget.WeatherXM.Button.Subtle.Borders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_update"
            android:drawableTint="@color/colorOnSurface"
            android:text="@string/action_skip_for_now"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
