<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.WeatherXM.MaterialCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_dialog_title"
                android:textAppearance="@style/TextAppearance.WeatherXM.Default.HeadlineSmall.SansSerifMedium"
                android:textColor="@color/darkestBlue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:textAppearance="@style/TextAppearance.WeatherXM.Default.BodyLarge"
                tools:text="@string/terms_dialog_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/understandBtn"
                style="@style/Widget.WeatherXM.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_to_large"
                android:text="@string/action_i_understand"
                app:layout_constraintTop_toBottomOf="@id/message" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</com.google.android.material.card.MaterialCardView>
